--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html lang="no">
+<head>
+    <meta name ="viewport" content ="width=device-width, initial-scale=1">
+    <meta charset="UTF-8"
+    <title></title>
+    <link rel ="stylesheet" href ="css/stylesheet-update.css">
+</head>
+<body>
+
 <h1> Hello World! this is the start of my portfolio website </h1>
+  
+</head>
+<body>
