--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
     <meta name ="viewport" content ="width=device-width, initial-scale=1">
     <meta charset="UTF-8"
     <title></title>
-    <link rel ="stylesheet" href ="stylesheet-index.css">
+    <link rel ="stylesheet" href ="../CSS/stylesheet-index.css">
 </head>
 <body>
 
