Changes to the index.html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,13 +2,20 @@
 <html lang="no">
 <head>
     <meta name ="viewport" content ="width=device-width, initial-scale=1">
-    <meta charset="UTF-8"
-    <title></title>
+    <meta charset="UTF-8">
+    <title>EatMeMaybe</title>
     <link rel ="stylesheet" href ="../CSS/stylesheet-index.css">
 </head>
 <body>
 
-<h1> Hello World! this is the start of my portfolio website </h1>
-  
+<h1> Hello World! Welcome to EatMeMaybe </h1>
+    
+    <ul>
+        <li><a href="#addItem">Add items</a></li>
+        <li><a href="#products">Products</a></li>
+        <li><a href="#profile">Profile</a></li>
+        <li><a href="#about">About</a></li>
+    </ul>
+
 </head>
 <body>
