--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,15 +7,14 @@
     <link rel ="stylesheet" href ="../CSS/stylesheet-index.css">
 </head>
 <body>
-
-<h1> Hello World! Welcome to EatMeMaybe </h1>
-    
-    <ul>
-        <li><a href="#addItem">Add items</a></li>
-        <li><a href="#products">Products</a></li>
-        <li><a href="#profile">Profile</a></li>
-        <li><a href="#about">About</a></li>
-    </ul>
-
-</head>
-<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#addItem">Add items</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#profile">Profile</a></li>
+                <li><a href="#about">About</a></li>
+            </ul>
+        </nav>
+    </header>
+</body>
