--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,10 +10,11 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#addItem">Add items</a></li>
+                <li><a href="#index">Home</a></li>
+                <li><a href="#addItem">Add item</a></li>
                 <li><a href="#products">Products</a></li>
-                <li><a href="#profile">Profile</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="#profile">Profile</a></li>
             </ul>
         </nav>
     </header>
