--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,22 +10,22 @@
     <nav>
         <ul class="sidebar">
             <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-            <li><a href="#index">Home</a></li>
-            <li><a href="#addItem">Add item</a></li>
-            <li><a href="#products">Products</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#profile">Profile</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="addItem.html">Add item</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="profileSettings.html">Profile</a></li>
         </ul>
         <header>
-            <div class="logo">
+            <ul class="logo">
                 <li><a href="#index">Logo</a></li>
-            </div>
+            </ul>
             <ul>
-                <li class="hideOnMobile"><a href="#index">Home</a></li>
-                <li class="hideOnMobile"><a href="#products">Products</a></li>
-                <li class="hideOnMobile"><a href="#about">About</a></li>
-                <li class="hideOnMobile"><a href="#addItem">Add item</a></li>
-                <li class="hideOnMobile"><a href="#profile">Profile</a></li>
+                <li class="hideOnMobile"><a href="index.html">Home</a></li>
+                <li class="hideOnMobile"><a href="products.html">Products</a></li>
+                <li class="hideOnMobile"><a href="about.html">About</a></li>
+                <li class="hideOnMobile"><a href="addItem.html">Add item</a></li>
+                <li class="hideOnMobile"><a href="profileSettings.html">Profile</a></li>
                 <li class="menuButton" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
             </ul>
         </header>
