--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 <li><a href="#index">Logo</a></li>
             </ul>
             <ul>
-                <li class="hideOnMobile"><a href="index.html">Home</a></li>
-                <li class="hideOnMobile"><a href="products.html">Products</a></li>
-                <li class="hideOnMobile"><a href="about.html">About</a></li>
-                <li class="hideOnMobile"><a href="addItem.html">Add item</a></li>
-                <li class="hideOnMobile"><a href="profileSettings.html">Profile</a></li>
+                <li class="hideOnMobile"><a href="HTML/index.html">Home</a></li>
+                <li class="hideOnMobile"><a href="HTML/products.html">Products</a></li>
+                <li class="hideOnMobile"><a href="HTML/about.html">About</a></li>
+                <li class="hideOnMobile"><a href="HTML/addItem.html">Add item</a></li>
+                <li class="hideOnMobile"><a href="HTML/profileSettings.html">Profile</a></li>
                 <li class="menuButton" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
             </ul>
         </header>
