--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <nav>
         <ul class="sidebar">
             <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="addItem.html">Add item</a></li>
-            <li><a href="products.html">Products</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="profileSettings.html">Profile</a></li>
+            <li><a href="HTML/index.html">Home</a></li>
+            <li><a href="HTML/addItem.html">Add item</a></li>
+            <li><a href="HTML/products.html">Products</a></li>
+            <li><a href="HTML/about.html">About</a></li>
+            <li><a href="HTML/profileSettings.html">Profile</a></li>
         </ul>
         <header>
             <ul class="logo">
