Added menu in products.html, with css in products.css

--- a/HTML/products.html
+++ b/HTML/products.html
@@ -10,12 +10,24 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#index">Home</a></li>
-                <li><a href="#addItem">Add item</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#profile">Profile</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="addItem.html">Add item</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="profile.html">Profile</a></li>
             </ul>
         </nav>
     </header>
+
+    <!-- Meny for å søke i produktkategorier -->
+    <div class="content">
+    <div class="search-container">
+        <input type="text" class="search-bar" placeholder="Søk etter produkter">
+        <button class="search-btn">🔍</button>
+    </div>
+    <button class="category">FRYSEVARER</button>
+    <button class="category">KJØLEVARER</button>
+    <button class="category">KOLONIALVARER</button>
+</div>
+
 </body>
