--- a/HTML/signin.html
+++ b/HTML/signin.html
@@ -29,5 +29,17 @@
     </header>
 </nav>
 
+<div id="signUp" class="form">
+    <form method="POST" action="../authenticate.js">
+        <h1>Sign up today!</h1>
+        <label>
+            Email:
+            <input type="text" name="username" required></input>
+        </label></br>
+        <button id="signUpButton" class="button" type="submit">Continue</button>
+    </form>
+</div>
+
+
 </body>
 </html>
