--- a/HTML/signin.html
+++ b/HTML/signin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<link rel ="stylesheet" href ="../CSS/stylesheet-index.css">
 <body>
 <nav>
     <ul class="sidebar">
