--- a/HTML/profileSettings.html
+++ b/HTML/profileSettings.html
@@ -4,18 +4,43 @@
     <meta name ="viewport" content ="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>EatMeMaybe</title>
-    <link rel ="stylesheet" href ="../CSS/stylesheet-profileSettings.css">
+    <link rel = "stylesheet" href = "../CSS/mainview.css">
+    <link rel ="stylesheet" href ="../CSS/profileSettings-content.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#index">Home</a></li>
-                <li><a href="#addItem">Add item</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#profile">Profile</a></li>
+    <nav>
+        <ul class="sidebar">
+            <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="profileSettings.html">Profile</a></li>
+        </ul>
+        <header>
+            <ul class="logo">
+                <li><a href="#index">Logo</a></li>
             </ul>
-        </nav>
-    </header>
+            <ul>
+                <li class="hideOnMobile"><a href="../index.html">Home</a></li>
+                <li class="hideOnMobile"><a href="products.html">Products</a></li>
+                <li class="hideOnMobile"><a href="about.html">About</a></li>
+                <li class="hideOnMobile"><a href="profileSettings.html">Profile</a></li>
+                <li class="menuButton" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+            </ul>
+        </header>
+    </nav>
+
+    <script src="JS/navbar.js"></script>
+
+    <script>
+        function showSidebar(){
+            const sidebar = document.querySelector('.sidebar')
+            sidebar.style.display = 'flex'
+        }
+        function hideSidebar(){
+            const sidebar = document.querySelector('.sidebar')
+            sidebar.style.display = 'none'
+        }
+    </script>
+
 </body>
