--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <meta name ="viewport" content ="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>EatMeMaybe</title>
-    <link rel ="stylesheet" href ="CSS/stylesheet-index.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel = "stylesheet" href = "CSS/mainview.css">
+    <link rel ="stylesheet" href ="CSS/index-content.css">
 </head>
 <body>
     <nav>
         <ul class="sidebar">
             <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-            <li><a href="HTML/index.html">Home</a></li>
-            <li><a href="HTML/addItem.html">Add item</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="HTML/products.html">Products</a></li>
             <li><a href="HTML/about.html">About</a></li>
             <li><a href="HTML/profileSettings.html">Profile</a></li>
@@ -22,18 +21,10 @@
                 <li><a href="#index">Logo</a></li>
             </ul>
             <ul>
-                <li class="hideOnMobile"><a href="HTML/index.html">Home</a></li>
+                <li class="hideOnMobile"><a href="index.html">Home</a></li>
                 <li class="hideOnMobile"><a href="HTML/products.html">Products</a></li>
                 <li class="hideOnMobile"><a href="HTML/about.html">About</a></li>
-                <li class="hideOnMobile"><a href="HTML/addItem.html">Add item</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropbtn" onclick="myFunction()">Profile <i class="fa fa-caret-down"></i></a>
-                    <div class="dropdown-content" id="myDropdown">
-                        <a href="HTML/profileSettings.html">Profile settings</a>
-                        <a href="#">Link 2</a>
-                        <a href="#">Link 3</a>
-                    </div>
-                </li>
+                <li class="hideOnMobile"><a href="HTML/profileSettings.html">Profile</a></li>
                 <li class="menuButton" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
             </ul>
         </header>
@@ -104,5 +95,17 @@
             </div>
         </div>
     </div>
+    
+
+    <script>
+        function showSidebar(){
+            const sidebar = document.querySelector('.sidebar')
+            sidebar.style.display = 'flex'
+        }
+        function hideSidebar(){
+            const sidebar = document.querySelector('.sidebar')
+            sidebar.style.display = 'none'
+        }
+    </script>
     <script src="JS/navbar.js"></script>
 </body>
