worked on the Database a bit, moved to .env folder

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Login</title>
 </head>
-<link rel ="stylesheet" href ="../CSS/stylesheet-index.css">
+<link rel="stylesheet" href="../CSS/mainview.css">
+<link rel ="stylesheet" href ="../CSS/index-content.css">
 <body>
 <nav>
     <ul class="sidebar">
