Fixed some changes from last commit

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <li class="hideOnMobile"><a href="HTML/products.html">Products</a></li>
                 <li class="hideOnMobile"><a href="HTML/about.html">About</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropbtn" onclick="myFunction()">Profile <i class="fa fa-caret-down"></i></a>
-                    <div class="dropdown-content" id="myDropdown">
+                    <a href="#" class="dropbtn" onclick="dropdownFunction()">Profile <i class="fa fa-caret-down"></i></a>
+                    <div class="dropdown-content" id="menuDropdown">
                         <a href="HTML/profileSettings.html">Profile settings</a>
                         <a href="#">Link 2</a>
                         <a href="#">Link 3</a>
