--- a/HTML/addItem.html
+++ b/HTML/addItem.html
@@ -7,15 +7,96 @@
     <link rel ="stylesheet" href ="../CSS/stylesheet-addItem.css">
 </head>
 <body>
-    <header>
-        <nav>
+    <nav>
+        <ul class="sidebar">
+            <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="addItem.html">Add item</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="profileSettings.html">Profile</a></li>
+        </ul>
+        <header>
+            <div class="logo">
+                <li><a href="#index">Logo</a></li>
+            </div>
             <ul>
-                <li><a href="#index">Home</a></li>
-                <li><a href="#addItem">Add item</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#profile">Profile</a></li>
+                <li class="hideOnMobile"><a href="../index.html">Home</a></li>
+                <li class="hideOnMobile"><a href="products.html">Products</a></li>
+                <li class="hideOnMobile"><a href="about.html">About</a></li>
+                <li class="hideOnMobile"><a href="addItem.html">Add item</a></li>
+                <li class="hideOnMobile"><a href="profileSettings.html">Profile</a></li>
+                <li class="menuButton" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
             </ul>
-        </nav>
-    </header>
+        </header>
+    </nav>
+
+    <div class="container">
+
+        <form action="#">
+            <div class="form-first">
+                <div class="product-item"></div>
+                <span class="title">Add product:</span>
+
+                <div class="fields">
+                    <div class="input-fields">
+                        <label for="product">Product</label><br>
+                        <input type="text" id="product" name="product" placeholder="Enter product">
+                    </div>
+                    <div class="input-fields">
+                        <label for="expDate">Expiration date</label><br>
+                        <input type="date" id="expDate" name="expDate" placeholder="Enter expiration date">
+                    </div>
+                </div>
+            </div>
+        </form>
+        <form action="#">
+            <div class="form-second">
+                <div class="own-product-item"></div>
+                <span class="title">Add own product:</span>
+
+                <div class="fields">
+                    <div class="own-input-fields">
+                        <label for="ownProduct">Product</label><br>
+                        <input type="text" id="ownProduct" name="ownProduct" placeholder="Enter product">
+                    </div>
+                    <div class="own-input-fields">
+                        <label for="ownExpDate">Expiration date</label><br>
+                        <input type="date" id="ownExpDate" name="ownExpDate" placeholder="Enter expiration date">
+                    </div>
+                </div>
+            </div>
+        </form>
+        <form action="#">
+            <div class="form-third"> 
+                <div class="favourites"></div>
+                <span class="title">Add favourite product:</span>
+
+                <div class="fields">
+                    <div class="fav-input-fields">
+                        <label for="favProduct">Product</label><br>
+                        <input type="text" id="favProduct" name="favProduct" placeholder="Enter product">
+                    </div>
+                    <div class="fav-input-fields">
+                        <label for="favExpDate">Expiration date</label><br>
+                        <input type="date" id="favExpDate" name="favExpDate" placeholder="Enter expiration date"><br>
+                        <input type="submit" value="Submit">
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+    <form action="#">
+        <fieldset class="fieldProd">
+          <legend>Add product:</legend>
+          <label for="product">Product:</label><br>
+          <input type="text" id="product" name="product" placeholder="Enter product"><br>
+          <label for="ExpDate">Expiration date:</label><br>
+          <input type="date" id="expDate" name="expDate"><br>
+          <input type="submit" value="Submit">
+        </fieldset>
+      </form>
+    
+
+    <script src="JS/navbar.js"></script>
 </body>
