--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </ul>
         <header>
             <ul class="logo">
-                <li><a href="#index">Logo</a></li>
+                <li><a href="index.html">Logo</a></li>
             </ul>
             <ul>
                 <li class="hideOnMobile"><a href="index.html">
