--- a/HTML/signin.html
+++ b/HTML/signin.html
@@ -43,7 +43,7 @@
     </nav>
 
 <div class="container">
-    <h2>Sign up today!</h2>
+    <h2>Sign in</h2>
     <form method="POST" action="../authenticate.js">
         <input type="email" id="username" name="username" placeholder="Email" required>
         <button type="submit" id="signUpButton" class="button">Continue</button>
