added register link

--- a/HTML/signin.html
+++ b/HTML/signin.html
@@ -47,6 +47,7 @@
     <form method="POST" action="../authenticate.js">
         <input type="email" id="username" name="username" placeholder="Email" required>
         <button type="submit" id="signUpButton" class="button">Continue</button>
+        <a href="signUp.html">Don't have an account? Register!</a>
     </form>
 </div>
 
