--- a/HTML/signUp.html
+++ b/HTML/signUp.html
@@ -51,6 +51,7 @@
             <input type="password" id="password" name="password" placeholder="Password" required>
             <input type="password" id="confPassword" name="confPassword" placeholder="Confirm password" required>
             <button type="submit" id="submit">Sign up</button>
+            <a href="signin.html">Already have an account? Sign in!</a>
         </form>
     </div>
 
