--- a/HTML/signin.html
+++ b/HTML/signin.html
@@ -46,6 +46,7 @@
     <h2>Sign in</h2>
     <form method="POST" action="../authenticate.js">
         <input type="email" id="username" name="username" placeholder="Email" required>
+        <input type="password" id="pass" name="pass" placeholder="Password" required>
         <button type="submit" id="signUpButton" class="button">Continue</button>
         <a href="signUp.html">Don't have an account? Register!</a>
     </form>
