Added firestore.js and products.js. Made connetion to Firestore POGCHAMP

--- a/HTML/products.html
+++ b/HTML/products.html
@@ -84,8 +84,12 @@
             <button type="button" class="add-article-btn">Add Article</button>
         </div>
     </div>
-
+     
+    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
+    <script src="../JS/firestore.js"></script>
+    <script src="../JS/products.js"></script>
     <script src="../JS/search.js"></script>
-    <script src="../JS/navbar.js"></script>    
+    <script src="../JS/navbar.js"></script>  
 </body>
 </html>
