added expire function, dates remaining, coloured depending on days

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
         </header>
     </nav>
 
+
     <h2>My Inventory</h2>
     <table>
         <thead>
@@ -56,12 +57,14 @@
             <th>Kategori</th>
             <th>Antall</th>
             <th>Dato</th>
+            <th>Utløper om</th>
+            <th>Handling</th>
           </tr>
         </thead>
         <tbody id="inventory-table-body">
           <!-- Rader fylles med JS -->
         </tbody>
-    </table>
+      </table>
 
     <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
