translated header in index

--- a/public/index.html
+++ b/public/index.html
@@ -53,12 +53,12 @@
     <table>
         <thead>
           <tr>
-            <th>Produktnavn</th>
-            <th>Kategori</th>
-            <th>Antall</th>
-            <th>Dato</th>
-            <th>Utløper om</th>
-            <th>Handling</th>
+            <th>Product</th>
+            <th>Category</th>
+            <th>Quantity</th>
+            <th>Date</th>
+            <th>Expires In</th>
+            <th>Action</th>
           </tr>
         </thead>
         <tbody id="inventory-table-body">
