--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,8 @@
         </tbody>
       </table>
 
+      <div id="status-message"></div>
+
     <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
     <script src="JS/firestore.js"></script>
