added functionality to add product w category to database, slight change in html index

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
             <th>Product</th>
             <th>Category</th>
             <th>Quantity</th>
-            <th>Date</th>
+            <th>Date Added</th>
             <th>Expires In</th>
             <th>Action</th>
           </tr>
