--- a/public/HTML/products.html
+++ b/public/HTML/products.html
@@ -47,14 +47,27 @@
         <div class="search-container">
             <select id="category-dropdown" class="category-dropdown">
                 <option value="">All Products</option>
-                <option value="Frozen Articles">Frozen Products</option>
-                <option value="Cooling Articles">Cooling Products</option>
-                <option value="Fruits and Vegetables">Fruits and Vegetables</option>
-                <option value="Dry Articles">Dry Products</option>
+                <option value="Frozen Products">Frozen Products</option>
+                <option value="Cooling Products">Cooling Products</option>
+                <option value="Fruits & Vegetables">Fruits & Vegetables</option>
+                <option value="Dry Products">Dry Products</option>
             </select>
             <input type="text" id="search-bar" class="search-bar" placeholder="Search for products">
             <button type="button" class="search-btn" id="search-btn">🔍</button>
         </div>
+
+        <div class="add-product-container">
+            <input type="text" id="new-product-name" placeholder="New product name">
+            <select id="new-product-category">
+                <option value="">Select category</option>
+                <option value="Frozen Products">Frozen Products</option>
+                <option value="Cooling Products">Cooling Products</option>
+                <option value="Fruits & Vegetables">Fruits & Vegetables</option>
+                <option value="Dry Products">Dry Products</option>
+            </select>
+            <button id="add-new-product-btn">Add Product</button>
+        </div>
+        
 
         <div class="table-header">
             <div class="header-item">Product Name</div>
