Added pagination.js for limiting products per page

--- a/public/HTML/products.html
+++ b/public/HTML/products.html
@@ -79,6 +79,13 @@
                 <tbody id="product-list"></tbody>
             </table>
         </div>
+
+        <div class="pagination-controls">
+            <button id="prev-page-btn">Previous</button>
+            <span  id="current-page">Page 1</span>
+            <button id="next-page-btn">Next</button>
+        </div>
+        
     </div>
 
     <div id="product-modal" class="modal-overlay">
@@ -108,6 +115,7 @@
     <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
     <script src="../JS/firestore.js"></script>
     <script src="../JS/search.js"></script>
+    <script src="../JS/pagination.js"></script>
     <script src="../JS/products.js"></script>
     <script src="../JS/navbar.js"></script>  
 </body>
