--- a/public/HTML/signin.html
+++ b/public/HTML/signin.html
@@ -44,14 +44,13 @@
 
 <div class="container">
     <h2>Sign in</h2>
-    <form method="POST" action="../authenticate.js">
-        <input type="email" id="username" name="username" placeholder="Email" required>
-        <input type="password" id="pass" name="pass" placeholder="Password" required>
+    <form method="POST" action="">
+        <input type="text" id="username" name="username" placeholder="Username" >
+        <input type="password" id="pass" name="pass" placeholder="Password" >
         <button type="submit" id="signUpButton" class="button">Continue</button>
         <a href="signUp.html">Don't have an account? Register!</a>
+        <script type="module" src="../JS/authenticate.js"></script>
     </form>
 </div>
-
-
 </body>
 </html>
