--- a/public/HTML/signUp.html
+++ b/public/HTML/signUp.html
@@ -54,6 +54,6 @@
             <a href="signin.html">Already have an account? Sign in!</a>
         </form>
     </div>
-    <scrript src="../JS/signUp.js"></scrript>
+    <scrript src="../JS/authenticate.js"></scrript>
     <script src="../JS/navbar.js"></script>
 </body>
