--- a/public/HTML/signin.html
+++ b/public/HTML/signin.html
@@ -45,7 +45,7 @@
 <div class="container">
     <h2>Sign in</h2>
     <form method="POST" action="">
-        <input type="text" id="username" name="username" placeholder="Username" >
+        <input type="email" id="email" name="email" placeholder="Email" >
         <input type="password" id="pass" name="pass" placeholder="Password" >
         <button type="submit" id="signUpButton" class="button">Continue</button>
         <a href="signUp.html">Don't have an account? Register!</a>
