TY MARTIN OUR LORD AND SAVIOR

--- a/public/HTML/signUp.html
+++ b/public/HTML/signUp.html
@@ -54,6 +54,10 @@
             <a href="signin.html">Already have an account? Sign in!</a>
         </form>
     </div>
-    <scrript src="../JS/authenticate.js"></scrript>
+    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
+    <script src="../JS/firestore.js"></script>
+    <script src="../JS/authenticate.js"></script>
     <script src="../JS/navbar.js"></script>
+
 </body>
