--- a/public/HTML/login.html
+++ b/public/HTML/login.html
@@ -49,7 +49,11 @@
     <h2>Don't have an account?</h2>
     <button id="signUpButton" class ="button" onClick="location.href='signin.html'">Sign up</button>
 </div>
-
+<script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
+<script src="../JS/firestore.js"></script>
+<script src="../JS/authenticate.js"></script>
+<script src="../JS/navbar.js"></script>
 
 </body>
 </html>
