--- a/public/HTML/signin.html
+++ b/public/HTML/signin.html
@@ -52,5 +52,10 @@
         <script type="module" src="../JS/authenticate.js"></script>
     </form>
 </div>
+    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
+    <script src="../JS/firestore.js"></script>
+    <script src="../JS/authenticate.js"></script>
+    <script src="../JS/navbar.js"></script>
 </body>
 </html>
