--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="no">
+
 <head>
     <meta name ="viewport" content ="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
@@ -7,70 +8,106 @@
     <link rel = "stylesheet" href = "CSS/mainview.css">
     <link rel ="stylesheet" href ="CSS/index-content.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
+
 <body>
-<nav>
-    <ul class="sidebar">
-        <li onclick="hideSidebar()"><a href="#">
-            <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
-                <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
-            </svg>
+    <nav>
+        <ul class="sidebar">
+            <li onclick="hideSidebar()"><a href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
+                    <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
+                </svg>
             <li><a href="index.html">Home</a></li>
             <li><a href="HTML/products.html">Products</a></li>
             <li><a href="HTML/about.html">About</a></li>
             <li><a href="HTML/profileSettings.html">Profile</a></li>
-    </ul>
-    <header>
-        <ul class="logo">
-            <li><a href="index.html">Logo</a></li>
         </ul>
-        <ul>
-            <li class="hideOnMobile"><a href="index.html">
-                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
-                    <path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/>
-                </svg></a></li>
-            <li class="hideOnMobile"><a href="HTML/products.html">Products</a></li>
-            <li class="hideOnMobile"><a href="HTML/about.html">About</a></li>
-            <li class="dropdown">
-                <a href="#" class="dropbtn" onclick="dropdownFunction()">
+        <header>
+            <ul class="logo">
+                <li><a href="index.html">Logo</a></li>
+            </ul>
+            <ul>
+                <li class="hideOnMobile"><a href="index.html">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
-                        <path d="m370-80-16-128q-13-5-24.5-12T307-235l-119 50L78-375l103-78q-1-7-1-13.5v-27q0-6.5 1-13.5L78-585l110-190 119 50q11-8 23-15t24-12l16-128h220l16 128q13 5 24.5 12t22.5 15l119-50 110 190-103 78q1 7 1 13.5v27q0 6.5-2 13.5l103 78-110 190-118-50q-11 8-23 15t-24 12L590-80H370Zm70-80h79l14-106q31-8 57.5-23.5T639-327l99 41 39-68-86-65q5-14 7-29.5t2-31.5q0-16-2-31.5t-7-29.5l86-65-39-68-99 42q-22-23-48.5-38.5T533-694l-13-106h-79l-14 106q-31 8-57.5 23.5T321-633l-99-41-39 68 86 64q-5 15-7 30t-2 32q0 16 2 31t7 30l-86 65 39 68 99-42q22 23 48.5 38.5T427-266l13 106Zm42-180q58 0 99-41t41-99q0-58-41-99t-99-41q-59 0-99.5 41T342-480q0 58 40.5 99t99.5 41Zm-2-140Z"/>
-                    </svg> <i class="fa fa-caret-down"></i></a>
-                <div class="dropdown-content" id="menuDropdown">
-                    <a href="HTML/profileSettings.html">Profile settings</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
-                </div>
-            </li>
-            <li class="menuButton" onclick="showSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
-        </ul>
-    </header>
-</nav>
+                        <path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/>
+                    </svg></a></li>
+                <li class="hideOnMobile"><a href="HTML/products.html">Products</a></li>
+                <li class="hideOnMobile"><a href="HTML/about.html">About</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn" onclick="dropdownFunction()">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
+                            <path d="m370-80-16-128q-13-5-24.5-12T307-235l-119 50L78-375l103-78q-1-7-1-13.5v-27q0-6.5 1-13.5L78-585l110-190 119 50q11-8 23-15t24-12l16-128h220l16 128q13 5 24.5 12t22.5 15l119-50 110 190-103 78q1 7 1 13.5v27q0 6.5-2 13.5l103 78-110 190-118-50q-11 8-23 15t-24 12L590-80H370Zm70-80h79l14-106q31-8 57.5-23.5T639-327l99 41 39-68-86-65q5-14 7-29.5t2-31.5q0-16-2-31.5t-7-29.5l86-65-39-68-99 42q-22-23-48.5-38.5T533-694l-13-106h-79l-14 106q-31 8-57.5 23.5T321-633l-99-41-39 68 86 64q-5 15-7 30t-2 32q0 16 2 31t7 30l-86 65 39 68 99-42q22 23 48.5 38.5T427-266l13 106Zm42-180q58 0 99-41t41-99q0-58-41-99t-99-41q-59 0-99.5 41T342-480q0 58 40.5 99t99.5 41Zm-2-140Z"/>
+                        </svg> <i class="fa fa-caret-down"></i></a>
+                    <div class="dropdown-content" id="menuDropdown">
+                        <a href="HTML/profileSettings.html">Profile settings</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
+                </li>
+                <li class="menuButton" onclick="showSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+            </ul>
+        </header>
+    </nav>
 
 
-<h2>My Inventory</h2>
-<table>
-    <thead>
-    <tr>
-        <th>Product</th>
-        <th>Category</th>
-        <th>Quantity</th>
-        <th>Date Added</th>
-        <th>Expires In</th>
-        <th>Action</th>
-    </tr>
-    </thead>
-    <tbody id="inventory-table-body">
-    <!-- Rader fylles med JS -->
-    </tbody>
-</table>
+    <h2>My Inventory</h2>
 
-<div id="status-message"></div>
+    <div class="category-nav">
+        <button class="category-btn" data-category="">
+            <img src="MEDIA/grocery-cart.png" alt="All">
+        </button>
+        <button class="category-btn" data-category="Frozen Products">
+            <img src="MEDIA/frozen.png" alt="Frozen">
+        </button>
+        <button class="category-btn" data-category="Cooling Products">
+            <img src="MEDIA/fridge.png" alt="Cooling">
+        </button>
+        <button class="category-btn" data-category="Fruits and Vegetables">
+            <img src="MEDIA/vegetable.png" alt="Fruits and Vegetables">
+        </button>
+        <button class="category-btn" data-category="Dry Products">
+            <img src="MEDIA/spices.png" alt="Dry">
+        </button>
+    </div>
 
-<script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
-<script src="JS/firestore.js"></script>
-<script src="JS/userInventory.js"></script>
-<script src="JS/navbar.js"></script>
+    <div class="inventory-container">
+        <table>
+            <thead>
+                <tr>
+                    <th>Category</th>
+                    <th>Product</th>
+                    <th>Quantity</th>
+                    <th>Date Added</th>
+                    <th>Expires In</th>
+                    <th>Modify</th>
+                </tr>
+            </thead>
+            <tbody id="inventory-table-body">
+                <!-- Rader fylles med JS her -->
+            </tbody>
+        </table>
+    </div>
+
+    <div id="status-message"></div>
+
+    <template id="inventory-row-template">
+        <tr>
+            <td class="product-category"></td>
+            <td class="product-name"></td>
+            <td class="product-quantity"></td>
+            <td class="product-added-at"></td>
+            <td class="product-days-left"></td>
+            <td>
+                <button class="increase-btn">➕</button>
+                <button class="decrease-btn">➖</button>
+                <button class="delete-btn">🗑️</button>
+            </td>
+        </tr>
+    </template>
+
+    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
+    <script src="JS/firestore.js"></script>
+    <script src="JS/userInventory.js"></script>
+    <script src="JS/navbar.js"></script>
 </body>
