endret ikon på slettknapp i index

--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
             <td>
                 <button class="increase-btn">➕</button>
                 <button class="decrease-btn">➖</button>
-                <button class="delete-btn">🗑️</button>
+                <button class="delete-btn">❌</button>
             </td>
         </tr>
     </template>
