corrected css links in products

--- a/public/HTML/products.html
+++ b/public/HTML/products.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>EatMeMaybe</title>
-    <link rel="stylesheet" href="mainview.css">
-    <link rel="stylesheet" href="products-content.css">
+    <link rel="stylesheet" href="../CSS/mainview.css">
+    <link rel="stylesheet" href="../CSS/products-content.css">
 </head>
 <body>
     <nav>
