SignUp, SignIn, SignOut functions, + check user signedIn

--- a/public/HTML/about.html
+++ b/public/HTML/about.html
@@ -8,6 +8,10 @@
     <link rel ="stylesheet" href ="../CSS/about-content.css">
 </head>
 <body>
+<script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
+<script src="../JS/firestore.js"></script>
+<script src="../JS/authenticate.js"></script>
     <nav>
         <ul class="sidebar">
             <li onclick="hideSidebar()"><a href="#">
@@ -53,5 +57,5 @@
             document.querySelector('.sidebar').style.display = 'none';
         }
     </script>
-
+    <script src="../JS/navbar.js"></script>
 </body>
