--- a/public/HTML/products.html
+++ b/public/HTML/products.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="../CSS/products-content.css">
 </head>
 <body>
+<script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
+<script src="../JS/firestore.js"></script>
+<script src="../JS/authenticate.js"></script>
     <nav>
         <ul class="sidebar">
             <li><a href="#" id="hide-sidebar-btn">
@@ -104,12 +108,9 @@
             <p id="modal-message"></p>
         </div>
     </div>
-     
-    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
-    <script src="../JS/firestore.js"></script>
     <script src="../JS/search.js"></script>
     <script src="../JS/products.js"></script>
+    <script src="../JS/authenticate.js"></script>
     <script src="../JS/navbar.js"></script>  
 </body>
 </html>
