--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+<script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
+<script src="../JS/firestore.js"></script>
+<script src="../JS/authenticate.js"></script>
+
     <nav>
         <ul class="sidebar">
             <li onclick="hideSidebar()"><a href="#">
@@ -104,10 +109,6 @@
             </td>
         </tr>
     </template>
-
-    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
-    <script src="JS/firestore.js"></script>
     <script src="JS/userInventory.js"></script>
     <script src="JS/navbar.js"></script>
 </body>
