Added about page CSS and HTML

--- a/public/HTML/about.html
+++ b/public/HTML/about.html
@@ -43,6 +43,32 @@
         </header>
     </nav>
 
+        <div class="about-container">
+        <h1>Om Prosjektet</h1>
+
+        <div class="about-content">
+            <div class="project-description">
+                <p>
+                    Dette prosjektet er utviklet som en del av vårt gruppearbeid ved [skole/organisasjon]. 
+                    Målet med produktet er å forenkle og forbedre brukerens opplevelse med [beskriv formålet med produktet kort]. 
+                    Vi har fokusert på brukervennlighet, tilgjengelighet og moderne designprinsipper.
+                </p>
+                <p>
+                    I videoen til høyre gir vi en rask introduksjon og gjennomgang av hvordan du bruker produktet vårt effektivt.
+                </p>
+            </div>
+
+            <div class="video-wrapper">
+                <iframe
+                    src="https://www.youtube.com/embed/VIDEO_ID"
+                    title="Tutorial"
+                    frameborder="0"
+                    allowfullscreen
+                ></iframe>
+            </div>
+        </div>
+    </div>
+
     <script src="../JS/navbar.js" defer></script>
 
     <script>
