changed files for modularity and added cache to userInv

--- a/public/HTML/products.html
+++ b/public/HTML/products.html
@@ -134,11 +134,7 @@
         </div>
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-auth-compat.js"></script>
-    <script src="../JS/firestore.js"></script>
-    <script src="../JS/authenticate.js"></script>
-    <script src="../JS/search.js"></script>
+    <script type="module" src="../JS/authHandlers.js"></script>
+    <script type="module" src= "../JS/search.js"></script>
 </body>
 </html>
