fiksa custom modul quantity knapp

--- a/public/HTML/products.html
+++ b/public/HTML/products.html
@@ -116,11 +116,11 @@
     <input type="text" id="custom-product-name2" placeholder="Enter product name">
 </div>
 
-<label id="quantity-title" for="quantity-input">Choose Quantity</label>
+<label id="custom-quantity-input">Choose Quantity</label>
 <div class="quantity-selector">
-    <button type="button" class="quantity-btn" id="decrease-btn">−</button>
-    <input type="number" id="quantity-input" min="1" value="1">
-    <button type="button" class="quantity-btn" id="increase-btn">+</button>
+    <button type="button" class="quantity-btn" id="custom-decrease-btn">−</button>
+    <input type="number" id="custom-quantity" min="1" value="1">
+    <button type="button" class="quantity-btn" id="custom-increase-btn">+</button>
 </div>
 
 
